--- a/RollerCoasterModel/RollerCoasterSim.csproj
+++ b/RollerCoasterModel/RollerCoasterSim.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.7.6" />
+    <PackageReference Include="StbImageSharp" Version="2.30.15" />
   </ItemGroup>
 
 </Project>
