Refactor MainWindow to support multiple camera modes, enhance Renderer with track and train mesh creation, and integrate ImGui.NET for UI improvements.

--- a/RollerCoasterModel/RollerCoasterSim.csproj
+++ b/RollerCoasterModel/RollerCoasterSim.csproj
@@ -5,11 +5,13 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="OpenTK" Version="4.7.6" />
     <PackageReference Include="StbImageSharp" Version="2.30.15" />
+    <PackageReference Include="ImGui.NET" Version="1.89.9.3" />
   </ItemGroup>
 
 </Project>
