--- a/RollerCoasterModel/imgui.ini
+++ b/RollerCoasterModel/imgui.ini
@@ -1,10 +1,20 @@
 [Window][Debug##Default]
 Pos=60,60
-Size=400,400
+Size=400,200
 Collapsed=0
 
-[Window][Train Controls]
+[Window][Roller Coaster Controls]
 Pos=60,60
-Size=191,218
+Size=300,200
+Collapsed=0
+
+[Window][Camera Controls]
+Pos=60,270
+Size=300,200
+Collapsed=0
+
+[Window][Track Editor]
+Pos=60,480
+Size=300,200
 Collapsed=0
 
